# starpython

./: CLAUDE.md  README.md  environment.yml  pyproject.toml  pyrightconfig.json
notes/: session-001-decorators-and-dataclasses.md  session-001-project-setup.md
src/starpython/: __main__.py
src/starpython.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/starpython/gameplay/: __init__.py  gameplay.py
src/starpython/generation/: __init__.py  generation.py  systems.py
src/starpython/graphics/: __init__.py  graphics.py
src/starpython/input/: __init__.py  input.py
src/starpython/physics/: __init__.py  physics.py
starpython.egg-info/: SOURCES.txt  requires.txt
